--- a/AccountSeller_BE/AccountSeller.Domain/Messages/WarningMessages.resx
+++ b/AccountSeller_BE/AccountSeller.Domain/Messages/WarningMessages.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="VM006" xml:space="preserve">
+    <value>Can not delete this information</value>
+    <comment>Can not delete this information</comment>
+  </data>
   <data name="WM0001" xml:space="preserve">
     <value>Create. Is it OK?</value>
     <comment>Create. Is it OK?</comment>
